[package]
name = "greyna_bevy_tower_defense"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
rand = "0.8"
bevy_egui = "0.20"
console_error_panic_hook = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"

[target.'cfg(target_arch = "x86_64")'.dependencies.bevy]
features = ["dynamic_linking"]
